--- a/css/style.css
+++ b/css/style.css
@@ -129,8 +129,8 @@ button{
   width:10vw;
   height:7vh;
   margin-top:2%;
-  color:#333;
-  border: 2px solid #333;
+  color:white;
+  border: 2px solid white;
   font-size: 1.4vw;
   font-family:Times;
 }
