--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,9 @@ a:hover {
   background:grey;
 }
 
+/* ------------------------------------------------------------------------------
+nav items
+-------------------------------------------------------------------------------*/
 nav {
   background:#333;
   position:fixed;
@@ -31,6 +34,9 @@ img {
   max-height:95%;
 }
 
+/* ------------------------------------------------------------------------------
+	Containers
+-------------------------------------------------------------------------------*/
 .container {
   padding-bottom:6%;
   position:relative;
@@ -62,6 +68,9 @@ img {
   text-align:center;
 }
 
+/* ------------------------------------------------------------------------------
+	Cards
+-------------------------------------------------------------------------------*/
 .card, .largeCard {
   box-shadow: 0 4px 8px 0                 rgba(0,0,0,0.2);
   width:27%;
@@ -105,6 +114,10 @@ img {
   max-height:50%;
 }
 
+/* ------------------------------------------------------------------------------
+	Text
+-------------------------------------------------------------------------------*/
+
 h1,h5 {
   text-align:center;
   color:#333;
@@ -127,6 +140,9 @@ textarea{
   width:70%;
 }
 
+/* ------------------------------------------------------------------------------
+	buttons
+-------------------------------------------------------------------------------*/
 button{
   padding:1%;
   background-color:transparent;
@@ -168,6 +184,9 @@ button:hover {
    background-size: cover;
 }
 
+/* ------------------------------------------------------------------------------
+	forms
+-------------------------------------------------------------------------------*/
 input {
   background-color:white;
   opacity:.5;
@@ -180,6 +199,9 @@ form {
   text-align:center;
 }
 
+/* ------------------------------------------------------------------------------
+	media queries
+-------------------------------------------------------------------------------*/
 @media screen and (max-width: 780px) {
    .container, .container1 , .container3 { 
     background-attachment: scroll !important;
